[package]
name = "lambda_dispatcher"
version = "0.1.0"
authors = ["bachrc <8.bachrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spotipal_api = { path = "../spotipal_api" }
spotipal_business = { path = "../spotipal_business" }
lambda_runtime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
log = "^0.4"
simple_logger = "^1"

[[bin]]
name = "helloworld-handler"
path = "src/helloworld.rs"