[package]
name = "webserver"
version = "0.1.0"
authors = ["bachrc <8.bachrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
pretty_env_logger = "0.4"
spotipal_business = { path = "../spotipal_business" }
spotipal_api = { path = "../spotipal_api" }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
